feat: add bashrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,7 +6,8 @@
 - clean: ['~']
 
 - link:
+    ~/.bashrc: .bashrc
+    ~/.hyper.js: .hyper.js 
+    ~/.vscode/inject.css: .vscode/inject.css
     ~/.config/nvim/init.vim: nvim/init.vim
     ~/.config/nvim/coc-settings.json: nvim/coc-settings.json
-    ~/.vscode/inject.css: .vscode/inject.css
-    ~/.hyper.js: .hyper.js 
