--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 
 - link:
     ~/.bashrc: .bashrc
+    ~/.bash_aliases: .bash_aliases
     ~/.hyper.js: .hyper.js 
     ~/.vscode/inject.css: .vscode/inject.css
     ~/.config/nvim/init.vim: nvim/init.vim
