--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.bashrc: .bashrc
     ~/.bash_aliases: .bash_aliases
     ~/.hyper.js: .hyper.js 
+    ~/.gitconfig: .gitconfig
     ~/.vscode/inject.css: .vscode/inject.css
     ~/.config/nvim/init.vim: nvim/init.vim
     ~/.config/nvim/coc-settings.json: nvim/coc-settings.json
