--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.zshrc: .zshrc
     ~/.bashrc: .bashrc
     ~/.profile: .profile
+    ~/.conkyrc: .conkyrc 
     ~/.aliases: .aliases
     ~/.zprofile: .zprofile
     ~/.hyper.js: .hyper.js
