--- a/starship.toml
+++ b/starship.toml
@@ -3,3 +3,6 @@ add_newline = false
 [character]
 success_symbol = "[➜](bold green) "
 error_symbol = "[✗](bold red) "
+
+[git_branch]
+symbol = "🌵 "
