--- a/.conkyrc
+++ b/.conkyrc
@@ -55,7 +55,7 @@ conky.config = {
     own_window_class = 'Conky',
     own_window_type = 'desktop',
     stippled_borders = 0,
-    update_interval = 1.0,
+    update_interval = 2.0,
     uppercase = false,
     use_spacer = 'none',
     show_graph_scale = false,
@@ -72,15 +72,17 @@ ${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
 ${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
 ${color grey}CPU Usage:$color $cpu% ${cpubar 4}
 ${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
+${color grey}External IP: $color${execi 1000  wget -q -O- http://ipecho.net/plain; echo}
 $hr
-${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+${color grey}File systems: $color${fs_used /}/${fs_size /}
 ${color grey}Networking:
 Up:$color ${upspeed wlp2s0} ${color grey} - Down:$color ${downspeed wlp2s0}
 $hr
 ${color grey}Name              PID   CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+
+${color red}${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
+${color lightgrey}${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
+${color lightgrey}${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
+${color lightgrey}${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+$hr
 ]]
