--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -42,7 +42,7 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 10
+    x: 0
     y: 0
 
   # Spread additional padding evenly around the terminal content.
@@ -110,10 +110,10 @@ font:
     family: Cartograph CF
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Light 
 
   # Bold font face
-  # bold:
+  bold:
     # Font family
     #
     # If the bold family is not specified, it will fall back to the
@@ -121,10 +121,10 @@ font:
     # family: 'Roboto Mono' 
 
     # The `style` can be specified to pick a specific face.
-    # style: Bold  
+    style: Bold  
 
   # Italic font face
-  #italic:
+  italic:
     # Font family
     #
     # If the italic family is not specified, it will fall back to the
@@ -132,7 +132,7 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Italic
 
   # Bold italic font face
   #bold_italic:
@@ -150,9 +150,9 @@ font:
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-  #offset:
+  # offset:
   #  x: 0
-  #  y: 0
+  #  y: 0 
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
