--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -42,8 +42,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 0
-    y: 0
+    x: 10
+    y: 0 
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -57,7 +57,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  #decorations: full
+  # decorations: none 
 
   # Startup Mode (changes require restart)
   #
@@ -71,10 +71,10 @@ window:
   #startup_mode: Windowed
 
   # Window title
-  #title: Alacritty
+  # title: " " 
 
   # Allow terminal applications to change Alacritty's window title.
-  #dynamic_title: true
+  # dynamic_title: false 
 
   # Window class (Linux/BSD only):
   #class:
@@ -87,7 +87,7 @@ window:
   #
   # Override the variant of the GTK theme. Commonly supported values are `dark` and `light`.
   # Set this to `None` to use the default theme variant.
-  #gtk_theme_variant: None
+  gtk_theme_variant: None 
 
 #scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -107,10 +107,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Cartograph CF
+    family: Input Mono 
 
     # The `style` can be specified to pick a specific face.
-    style: Light 
+    style: Normal 
 
   # Bold font face
   bold:
@@ -146,13 +146,13 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 15.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-  # offset:
+  offset:
   #  x: 0
-  #  y: 0 
+    y: 6 
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
