--- a/starship.toml
+++ b/starship.toml
@@ -1,13 +1,9 @@
-add_newline = false
+add_newline = false 
 
 [character]
-success_symbol = "[➜](bold green) "
-error_symbol = "[✗](bold red) "
+success_symbol = "\\$"
+error_symbol = "[x](bold red)"
+vicmd_symbol = "[V](bold green)"
 
 [git_branch]
 symbol = "🌵 "
-
-[status]
-symbol = "💣 "
-format = '[\[$symbol$status\]]($style) '
-disabled = false
