feat: remove conky

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -107,10 +107,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Input Mono
+    family: MonoLisa 
 
     # The `style` can be specified to pick a specific face.
-    style: Normal 
+    style: Medium 
 
   # Bold font face
   bold:
