--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -42,7 +42,7 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 10
+    x: 0
     y: 0 
 
   # Spread additional padding evenly around the terminal content.
@@ -107,10 +107,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: MonoLisa 
+    family: 'Test Söhne Mono' 
 
     # The `style` can be specified to pick a specific face.
-    style: Medium 
+    # style: Medium 
 
   # Bold font face
   bold:
@@ -146,7 +146,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
